2009-09-09      Christian Mauderer <christian.mauderer@embedded-brains.de>

	* heapwalk/init.c, heapwalk/heapwalk.scn, malloctest/init.c,
	malloctest/malloctest.scn: New test cases.
	* stackchk/blow.c, stackchk/stackchk.scn: Update for heap API changes.

2009-09-03      Christian Mauderer <christian.mauderer@embedded-brains.de>

	* malloctest/init.c: New test cases. Update for heap API changes.
	* stackchk/blow.c: Update for heap API changes.

2009-08-19	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* heapwalk/init.c, stackchk/blow.c: Update for heap API changes.

2009-08-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* termios01/init.c, termios01/termios01.scn: Add a few error paths to
	complete coverage of termios_XXX_to_YYY() methods.

2009-08-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add new test to exercise tcgetattr and
	tcsetattr. Does a variety of baud, parity, stop bits, and bits per
	character with the assistance of a special test driver which prints
	the requests.
	* termios01/.cvsignore, termios01/Makefile.am, termios01/init.c,
	termios01/termios01.doc, termios01/termios01.scn,
	termios01/termios_testdriver.c, termios01/termios_testdriver.h: New files.

2009-08-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloctest/task1.c, stackchk/task1.c: Eliminate test routines
	TICKS_PER_SECOND and get_ticks_per_second() in favor of new
	rtems_clock_get_ticks_per_second().

2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpuuse/task1.c, termios/init.c: Convert calls to legacy routine
	rtems_clock_get( RTEMS_CLOCK_GET_xxx, ..) to rtems_clock_get_xxx().

2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpuuse/task1.c, cpuuse/tswitch.c, malloctest/task1.c,
	stackchk/task1.c: Convert calls to legacy routine rtems_clock_get(
	RTEMS_CLOCK_GET_TOD, ..) to rtems_clock_get_tod(..).

2009-08-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloctest/init.c: Adjust allocation in test so it passes now that